--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     --font-alt: 'Open Sans', sans-serif;
     --color-golden: #DCCA87;
     --color-black: #0C0C0C;
-    --color-gray: #545454;
+    --color-gray: #E8E8E8;
     --color-crimson: #F5EFDB;
     --color-grey: #AAAAAA;
     --color-white: #FFFFFF;
