--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,6 +17,7 @@
 .app__navbar-logo img {
     width: 100%;
     height: 100%;
+    padding-left: 25px;
 }
 
 .app__navbar-links {
@@ -25,6 +26,7 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    padding-right: 25px;
 }
 
 .app__navbar-links li {
@@ -33,13 +35,16 @@
 }
 
 .app__navbar-links li {
-    margin: 0 1rem;
+    margin: 0 3rem;
     cursor: pointer;
     color: var(--color-black);
+    font-size: 1rem;
+    font-style: normal;
 }
 
 .app__navbar-links li:hover {
-    color: var(--color-grey)
+    color: var(--color-grey);
+    cursor: pointer;
 }
 
 .app__navbar-smallscreen {
@@ -51,4 +56,52 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 100vh;
+    background-color: var(--color-gray);
+    transition: 0.5s ease;
+    flex-direction: column;
+    z-index: 5;
+}
+
+.app__navbar-smallscreen_overlay .overlay__close {
+    font-size: 27px;
+    color: var(--color-black);
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.app__navbar-smallscreen_links {
+    list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+    margin: 2rem 0;
+    cursor: pointer;
+    color: var(--color-black);
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--font-alt);
+}
+
+.app__navbar-smallscreen_links li:hover {
+    color: #fff;
+}
+
+@media screen and (max-width: 2000px) {
+    .app__navbar-logo img {}
+}
+
+@media screen and (max-width: 1150px) {
+    .app__navbar-links {
+        display: none;
+    }
+    .app__navbar-smallscreen {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .app__navbar {}
 }
