--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap');
 :root {
-    --font-base: 'Cormorant Upright', serif;
+    --font-base: 'Playfair Display;', serif;
     --font-alt: 'Open Sans', sans-serif;
     --color-golden: #DCCA87;
     --color-black: #0C0C0C;
-    --color-gray: #E8E8E8;
+    --color-gray: #FAFAFA;
     --color-crimson: #F5EFDB;
     --color-grey: #AAAAAA;
     --color-white: #FFFFFF;
