--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,17 @@
     flex-direction: column;
 }
 
+.app__wrapper_info1 {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    border-left: -300px;
+    margin-top: 100px;
+}
+
 .app__wrapper_img {
     flex: 2;
     width: 100%;
@@ -41,9 +52,19 @@
     margin-left: 2rem;
 }
 
+.app__wrapper_img1 {
+    flex: 2;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
 .app__wrapper_img-reverse {
     justify-content: flex-start;
-    margin-right: 2rem;
+    margin-right: 3rem;
 }
 
 .app__wrapper_img img {
@@ -79,6 +100,16 @@
 .p__opensans {
     font-family: var(--font-alt);
     color: var(--color-black);
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    line-height: 28px;
+    font-size: 16px;
+}
+
+.p__opensans1 {
+    font-family: var(--font-alt);
+    color: var(--color-grey);
     font-weight: 400;
     letter-spacing: 0.04em;
     text-transform: capitalize;
