--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -27,7 +27,7 @@
     top: 360px;
     background-color: white;
     /* A1A1A1 body Grey for black bg */
-    border: 1px solid #A1A1A1;
+    border: 1px solid #a1a1a1;
     box-sizing: border-box;
     /* Inside auto layout */
     flex: none;
@@ -54,9 +54,7 @@
     margin: 0px 10px;
 }
 
-.app__wrapper_img {
-    margin-top: -64px;
-}
+.app__wrapper_img {}
 
 .app__header-divider {
     width: 280.5px;
@@ -64,6 +62,26 @@
     display: inline-block;
     border: 1px solid #F37B20;
     flex-direction: row;
+}
+
+.app__header-divider1 {
+    align-items: flex-end;
+    width: 0px;
+    height: 415px;
+    left: 1815px;
+    top: 720px;
+    margin-top: 380px;
+    /* 595959 body grey for white bg */
+    border: 1px solid #595959;
+}
+
+.app__header-social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 28px;
+    top: 1125px;
 }
 
 @media screen and (max-width: 1150px) {
