--- a/src/container/Portfolio/Portfolio.css
+++ b/src/container/Portfolio/Portfolio.css
@@ -1,6 +1,17 @@
 .app__portfolio {
     background-color: #fff;
+    display: grid;
+}
+
+.app__portfolio-title {
+    padding-right: -2rem;
+    flex: 160%;
+    display: grid;
+}
+
+.app__portfolio-title-container {
     display: flex;
+    flex-direction: row;
 }
 
 .app__portfolio-h1 {
@@ -14,4 +25,77 @@
     letter-spacing: 0.04em;
     text-transform: capitalize;
     padding-right: 0px;
+}
+
+.app__portfolio-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 32px;
+    position: static;
+    width: 130px;
+    height: 44px;
+    left: 0px;
+    top: 360px;
+    background-color: white;
+    /* A1A1A1 body Grey for black bg */
+    border: 1px solid #a1a1a1;
+    box-sizing: border-box;
+    /* Inside auto layout */
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    margin: 24px 0px;
+}
+
+.app__portfolio-button p {
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 175%;
+    /* identical to box height, or 28px */
+    letter-spacing: 0.08em;
+    text-transform: capitalize;
+    /* 595959 body grey for white bg */
+    color: #595959;
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 0px;
+}
+
+.app__portfolio-hero {
+    justify-content: center;
+}
+
+.app__portfolio-image {
+    display: grid 2;
+    grid-gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.app__portfolio-image2 {
+    padding-left: 3rem;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+}
+
+.app__portfolio-image4 {
+    padding-left: 3rem;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+}
+
+.app__portfolio-divider {
+    width: 400px;
+    height: 0px;
+    display: inline-block;
+    border: 1px solid #F37B20;
+    flex-direction: row;
+    margin-left: 8rem;
+    margin-bottom: 2rem;
 }
